# moving-object-storage

./: .gitignore  CMakeLists.txt  MovingObjects.sln  MovingObjects.vcxproj  MovingObjects.vcxproj.filters  README.md
moving-object-storage/: main.cpp  moving-object-storage.cbp  moving-object-storage.depend
moving-object-storage/include/: DataStructure.h  EdgeVehicleReference.h  EdgeVehicleRefrence.h  NeighbourList.h  Osm.h  Vehicle.h
moving-object-storage/src/: DataStructure.cpp  NeighbourList.cpp  Osm.cpp  operations.cpp
